# CreditCardSpendAnalyzer

./: README.md  RUN.md  SETUP_AND_RUN.md  TODO.md  finance-ai-app-tech-plan.md
backend/: .env.example  __init__.py  config.py  database.py  finance.db  main.py  pyproject.toml  requirements.txt  start.sh
backend/api/routes/: ai.py  analytics.py  auth.py  plaid.py
backend/models/: __init__.py  account.py  ai_insight.py  base.py  plaid_item.py  transaction.py  user.py
backend/schemas/: __init__.py  account.py  ai_insight.py  transaction.py
backend/services/: auth_service.py  plaid_service.py
backend/services/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
backend/tests/: conftest.py  test_llm_providers.py  test_models.py  test_plaid_service.py
backend/utils/: __init__.py  security.py
frontend/: index.html  package-lock.json  package.json  start.sh  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: PlaidLink.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/services/: api.ts
