[tool.poetry]
name = "finance-ai-backend"
version = "1.0.0"
description = "Personal finance analytics with AI-powered insights"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
aiosqlite = "^0.19.0"
greenlet = "^3.0.0"
plaid-python = "^17.0.0"
ollama = "^0.1.6"
openai = "^1.10.0"
pandas = "^2.2.0"
python-dateutil = "^2.8.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
fastapi-cors = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[tool.poetry.group.celery]
optional = true

[tool.poetry.group.celery.dependencies]
celery = "^5.3.6"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"
